@@ -1,3 +1,6 @@
+2012-02-20 TADA Tadashi <t@tdtds.jp>
+	* fixed error on loading styles caused by style directory changed.
+
 2012-01-29 TADA Tadashi <t@tdtds.jp>
 	* Release 3.1.2.
 
